@@ -7,10 +7,10 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>tailwindfx.TailwindFXExample</exec.mainClass>
-        <javafx.version>17</javafx.version>
+        <javafx.version>21</javafx.version>
         <junit.version>5.10.2</junit.version>
         <testfx.version>4.0.17</testfx.version>
         <mockito.version>5.11.0</mockito.version>
@@ -170,10 +170,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
                     <compilerArgs>
-                        
+                        --enable-preview
                     </compilerArgs>
                 </configuration>
             </plugin>
